# vision_processing

./: .gitignore  .gitmodules  BRAINSTORM.md  CLAUDE.md  CMakeLists.txt  FUUUN.py  How_To_Save_dq.txt  OPTIMIZATION.md  TEST.py  config_vision.sh  inspect_args_output.txt  inspect_methods_output.txt  inspect_output.txt  normalization_stats.json  normalization_stats_9d.json  normalization_stats_fm.json  normalization_stats_fork_only.json  normalization_stats_urdf.json  package.xml  panda_arm_hand_combined.urdf.xacro  pipeline_timing.py  record_screen.sh  runPP1029_params.yaml  runPP1030_params.yaml  scratch.py  setup.py  test_IK.py  train_history_FPS.pkl  train_history_FPS_fork.pkl  train_history_urdf_FPS_fork.pkl  vision_processing.code-workspace  vision_processing_controllers.xml
base_diag/: summary.json
cbf_diag/: summary.json
config/: Cameras_parameters.yaml  cbf_config.rviz  cbf_test.rviz  circle_trajectory.rviz  env.yaml  isdf_wrist_camera.json  rnbf_wrist_camera.json  simple_controllers.yaml  simple_controllers_xarm.yaml  xarm7_gazebo_pid_gains.yaml
epsilon_calibration_pp/: batch_config.json  epsilon_calibration.json  epsilon_calibration_all26.json  epsilon_run_maxima.csv
epsilon_calibration_pp/failed_attempt_001_seed_1000/: metadata.json
epsilon_calibration_pp/failed_attempt_005_seed_1004/: metadata.json
epsilon_calibration_pp/failed_attempt_015_seed_1014/: metadata.json
epsilon_calibration_pp/failed_attempt_017_seed_1016/: metadata.json
epsilon_calibration_pp/failed_attempt_021_seed_1020/: metadata.json
epsilon_calibration_smoke_v2/: batch_config.json  epsilon_calibration.json  epsilon_run_maxima.csv
epsilon_calibration_smoke_v3_velocity/: batch_config.json  epsilon_calibration.json  epsilon_run_maxima.csv
epsilon_calibration_smoke_v4_velocity_gains/: INCOMPLETE.json  batch_config.json
launch/: circle_pipeline_franka.launch  circle_trajectory_franka.launch  feeding_simulation.launch  feeding_simulation_position_controller.launch  gazebo_with_moveit.launch  green_cube_feeding.launch  green_cube_feeding_casf.launch  green_cube_feeding_casf_multicbf.launch  green_cube_feeding_casf_pp.launch  green_cube_feeding_casf_pp_xarm.launch  pickplace_simulation.launch  pickplace_simulation_xarm.launch  safe_generative_planner.launch  test_cbf_safety.launch  test_cbf_safety_Bernstein.launch  test_perception_cbf.launch  test_perception_cbf_Bernstein.launch  test_sim.launch  vision_server.launch
models/: fm_results.json  fm_results_27D.json  fm_results_9D.json  fm_results_pickplace_10D.json  fm_results_pickplace_9D.json
msg/: CertifiedCbfCommand.msg  IssfEpsilonSample.msg  RobotObservation.msg
pkl_files/: train_history.pkl  train_history_FPS_fork.pkl  train_history_FPS_fork_only.pkl  train_history_fork_only.pkl  train_history_fork_only_SAMPLE.pkl  train_history_fork_only_SAMPLE_NO_AUG.pkl  train_history_urdf.pkl  train_history_urdf_FPS.pkl  train_history_urdf_FPS_fork.pkl  train_history_urdf_FPS_fork_SAMPLE.pkl
recordings/: fork_run1.json  tcp_run1.json
run10_diag/: diagnostics.csv
run11_diag/: diagnostics.csv  summary.json
run12_diag/: diagnostics.csv
run15_diag/: summary.json
run16_diag/: summary.json
run17_diag/: summary.json
run1_diag/: diagnostics.csv
run22_timing/: pipeline_timing.csv  pipeline_timing.json  pipeline_timing.tex
run2_diag/: diagnostics.csv
run3_diag/: summary.json
run4_diag/: summary.json
run6_NO_CBF_diag/: diagnostics.csv
run7_diag/: diagnostics.csv  summary.json
run8_NO_CBF_diag/: diagnostics.csv  summary.json
run9_diag/: summary.json
runX_diag/: diagnostics.csv
scripts/: Compute_3D_point_cloud_from_mesh.py  ContainerTracker.py  Filter_out_robot.py  Filter_outside_robot.py  GroundingDINO_with_Segment_Anything_Utils.py  NPY_visualizer.py  PersistentCloud.py  PersistentTargetModel.py  PersistentTargetModel_TEST.py  Real_time_Robot_segmentation.py  Robot_point_cloud_from_mask.npy  SAM3_Gemini.py  SDF.py  Segment_robot.py  Segment_robot_SAM2.py  Segment_robot_SAM3.py  Single_Segmentation_Gemini_SAM3.py  TEST.py  TEST_SAM2.py  TEST_SAM3.py  TEST_single.py  Total_segmentation.py  Total_segmentation_Gemini_SAM3.py  analyze_trajectory.py  calibrate_issf_epsilon.py  calories_app.py  calories_counter_without_measurement.py  casf_generative_node.py  casf_generative_node_PC.py  casf_generative_node_PC_pp.py  cbf_reflex_node.py  circle_trajectory.py  circle_trajectory_publisher.py  client.py  client_compute_total.py  condition_pcd_from_perception.py  condition_pcd_node.py  condition_pcd_node_Fork.py  condition_pcd_node_Fork_continuous.py  condition_pcd_node_Fork_continuous_1024.py  (+81 more)
sdf_gradient_experiments/: analytical_vs_autograd.csv  benchmark_analytical_vs_autograd.py  bspline_prototype.py  dump_worst.py  grad_smoothness.py  link_attribution_audit.py  lipschitz_bound_study.json  lipschitz_bound_study.py  lipschitz_bound_study_nfunc12.json  make_thesis_results.py  measure_sdf_clean.py  probe_artifacts.py  probe_speed.py  render_sdf_iso.py  replay_reflex_alpha.py  validate_finger_candidates.py  whole_body_grad_audit.py
solver_study_out/: solver_study.json
srv/: ProcessImage.srv  ProcessRobot.srv  Sam3Segment.srv
test_novelty/: benchmark_ror.py  cbf_safety_node.py  cbf_safety_node_Bernstein.py  cbf_safety_node_Bernstein_multicbf.py  dummy_robot_node.py  mock_environment_node.py  sad_flower_planner.py  sam3_sam2_node.py  sam3_sam2_node_pp.py  test_safeflowmatcher.py
tests/: test_analytical_bernstein.py  test_certified_cbf_math.cpp  test_issf_epsilon_calibration.py  test_persistent_moving_sphere.py  test_projection_aware_feedback.py  test_real_distance.py  test_smoothing_in_projection.py
urdf/: Other_container.stl  Other_container_collision.stl  brown_box.urdf  container.xacro  food.urdf  material.mtl  panda_camera.xacro  panda_fork.urdf  panda_pickplace.xacro  person_seated.urdf  pp_crescent_obstacle.xacro  pp_cylinder_obstacle.xacro  pp_prism_obstacle.xacro  red_cube.urdf  simple_fish_bowl.dae  simple_fish_bowl.stl  table.urdf  xarm7_pickplace.xacro
worlds/: feeding.world
z_test/: test.py
(+612 files in other folders)
